feat(book): 本の取得・削除と、自分のアカウント情報の取得を追加する
